--- a/lec2.html
+++ b/lec2.html
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Tag Example </title>
 </head>
+
 <body>
     <h1>Media Tags in HTML</h1>
     <h2>Image</h2>
-    <img src="https://share.google/images/p3TMHm4uf11vijJ1E" ="Sample Image" width="300" height="200"/><p>This is an image using the <code>&lt;img&gt;</code>tag.</p>
+    <img src="https://www.skyweaver.net/images/media/wallpapers/wallpaper1.jpg" width="500" height="300" />
+    <p>This is an image using the <code>&lt;img&gt;</code>tag.</p>
     <h2>Audio</h2>
     <audio controls>
-        <source src=""type="audio/mpeg"/><source src=""
-        type="audio/orgg"/> Your browser does not support the audio element.</audio>
-        <p>This is an audio player using the <code>&lt;audio&gt;</code>tag.</p><h2>Video</h2>
-    <video width ="400" controls>
-        <source src="" type="video/mp4"/><source src=""
-        type="video/orgg"/> Your browser dos not support the video tag.</video>
-        <p>This is a video player using the <code>&lt;video&gt;</code>tag.</p>
-        <h2>Embedded Video (Iframe)</h2>
-        <iframe width="400"height="250"src=""title ="youtube video"
-        frameborder="0" allowfullscreen></iframe>
-        <p>This uses <code>&lt;iframe&gt;</code>toembed a You tube video.</p></body></html></p>
-    
-    
+        <source src="little_krishna.mp3" type="audio/mpeg" />
+        <source src="little_krishna.ogg" type="audio/orgg" /> Your browser does not support the audio element.
+    </audio>
+    <p>This is an audio player using the <code>&lt;audio&gt;</code>tag.</p>
+    <h2>Video</h2>
+
+
+    <p>This is a video player using the <code>&lt;video&gt;</code>tag.</p>
+    <h2>Embedded Video (Iframe)</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/erar4vTOf-k?si=XdA0f-jx8pUZk9Dd"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <p>This uses <code>&lt;iframe&gt;</code>to embed a Youtube video.</p>
 </body>
+
+</html>
+</p>
+</body>
+
 </html>
