--- a/experiment2.html
+++ b/experiment2.html
@@ -11,15 +11,15 @@
     
         <h1>Global Daily News</h1>
         <p>Your Trusted Source for Latest Updates</p>
-        <a href="https://www.google.com">World</a>
-        <a href="https://www.google.com">Sports</a>
-        <a href="https://www.google.com">Entertainment</a>
-        <a href="https://www.google.com">Podcast</a>
-        <a href="https://www.google.com">Contact</a>
+        <a href="https://www.bbc.com/news/world">World</a>
+        <a href="https://www.bbc.com/news/world">Sports</a>
+        <a href="https://www.bbc.com/news/world">Entertainment</a>
+        <a href="https://www.bbc.com/news/world">Podcast</a>
+        <a href="https://www.bbc.com/news/world">Contact</a>
         <p>World News</p>
         <p>Today's top headline: Global leaders meet to discuss climate change initiatives.</p>
         <img src="https://c.files.bbci.co.uk/16B26/production/_96566929_bbc_wn_rgb.png" width="500" height="300" />
-        <p><a href="https://www.google.com">Read more on BBC</a></p>
+        <p><a href="https://www.bbc.com/news/world">Read more on BBC</a></p>
         <h2>Sports Update</h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/3LX-K8wWtmY?si=wylj4XEo78KMTaP0"
             title="YouTube video player" frameborder="0"
