--- a/experiment2.html
+++ b/experiment2.html
@@ -9,13 +9,16 @@
 
 <body>
     
-        <h1>Global Daily News</h1>
-        <p>Your Trusted Source for Latest Updates</p>
-        <a href="https://www.bbc.com/news/world">World</a>
-        <a href="https://www.bbc.com/news/world">Sports</a>
-        <a href="https://www.bbc.com/news/world">Entertainment</a>
-        <a href="https://www.bbc.com/news/world">Podcast</a>
-        <a href="https://www.bbc.com/news/world">Contact</a>
+        <h1 align="center" >Global Daily News</h1>
+        <p align="center">Your Trusted Source for Latest Updates</p>
+        <hr></hr>
+        <p align="center">
+        <a href="https://www.bbc.com/news/world">World|</a>
+        <a href="https://www.bbc.com/news/world">Sports|</a>
+        <a href="https://www.bbc.com/news/world">Entertainment|</a>
+        <a href="https://www.bbc.com/news/world">Podcast|</a>
+        <a href="https://www.bbc.com/news/world">Contact|</a></p>
+        <hr></hr>
         <p>World News</p>
         <p>Today's top headline: Global leaders meet to discuss climate change initiatives.</p>
         <img src="https://c.files.bbci.co.uk/16B26/production/_96566929_bbc_wn_rgb.png" width="500" height="300" />
