--- a/timetable.html
+++ b/timetable.html
@@ -9,71 +9,98 @@
   
      <h1> Class Timetable </h1>
 
-    <table border="1" cellpadding="10" cellspacing="0">
-        <caption><b>Class Timetable</b></caption>
+    <table border="1">
+        <thead>
         <tr>
-            <th>S.No</th>
-            <th>period 1</th>
-            <th> period 2</th>
-            <th> period3</th>
-            <th>period4</th>
-            <th> LUNCH</th>
-            <th>  period 5</th>
-            <th> period 6</th>
-            <th>period 7</th>
-            <th> period 8</th>
+            <th><pre>Time
+Day</pre></th>
+            <th><pre>I 
+<hr>
+08:50-09:40</pre></th>
+            <th><pre>II
+                <hr>
+09:40-10:30
+            </pre></th>
+            <th> <pre>III 
+                <hr>
+10:40-11:30                
+            </pre></th>
+            <th><pre>IV 
+                <hr>
+11:30-12:20                
+            </pre></th>
+            <th> <pre> V 
+                <hr>
+12:20-01:10                
+            </pre></th>
+            <th><pre> VI 
+                <hr>
+01:10-02:00                
+            </pre></th>
+            <th> <pre> VII 
+                <hr>
+02:00-02:50                
+            </pre></th>
+            <th><pre> VII 
+                <hr>
+02:50-03:40                
+            </pre></th>
+            <th><pre> VIII 
+                <hr>
+03:40-04:30              
+            </pre></th>
         </tr>
-        <td>1</td>
-            <td colspan="2">electrical engneering </td>
-           
-            <td>math</td>
-            <td> electrical engneering</td>
-            <td rowspan="5">LUNCH</td>
-            <td> math </td>
-            <td> physics</td>
-            <td>DSA</td>
-            <td> DSA</td>
+        </thead>
+        <tbody>
+            <tr>
+            <td>Monday</td>
+            <td colspan="2">Web Designing </td>
+            <td>Mathematics</td>
+            <td> Applied Physics</td>
+            <td rowspan="5"> LUNCH </td>
+            <td>EVS</td>
+            <td>AI</td>
+            <td>Electrical Engineering</td>
+            <td>Mathematics</td>
             </tr>
         <tr>
-            <td>2</td>
-            <td>electical engneering</td>
-            <td> physics</td>
-            <td colspan="2">CAD lab</td>
+            <td>Tuesday</td>
+            <td>Mathematics</td>
+            <td>Web Designing</td>
             <td>EVS</td>
+            <td>Electrical Engineering</td>
+            <td>Applied Physics</td>
             <td>AI</td>
-            <td>math</td>
-            <td> mentor- mentee</td>
-
+            <td colspan="2">Applied Physics</td>
         </tr>
         <tr>
-            <td>3</td>
-            <td>math</td>
-            <td> EVS</td>
-            <td colspan="2"> WEB devlopment</td>
-            <td>EVS</td>
-            <td> electrical engneering</td>
+            <td>Wednesday</td>
             <td>AI</td>
-            <td></td>
+            <td>Electrical Engineering</td>
+            <td>Applied Physics</td>
+            <td>Mathematics</td>
+            <td>Mathematics</td>
+            <td colspan="2">DSA</td>
         </tr>
-         <td>4</td>
-            <td colspan="2">electrical engneering </td>
-           
-            <td>math</td>
-            <td> electrical engneering</td>
-            <td rowspan="5">LUNCH</td>
-            <td> math </td>
-            <td> physics</td>
-            <td>DSA</td>
+        <tr>
+            <td>Thursday</td>
+            <td colspan="2">CAD Lab</td>
+            <td colspan="2">DSA</td>
+            <td>Applied Physics</td>
+            <td>Mathematics</td>
+            <td>EVS</td>
+            <td>Electrical Engineering</td>
             </tr>
              <tr>
-            <td>5</td>
-            <td>electical engneering</td>
-            <td> physics</td>
-            <td colspan="2">CAD lab</td>
-            <td>EVS</td>
-            <td>AI</td>
-            <td>math</td>
+            <td>Friday</td>
+            <td colspan="2">DSA</td>
+            <td colspan="2">Electrical Engineering Lab</td>
+            <td>Electrical Engineering</td>
+            <td>Applied Physics</td>
+            <td>Mathematics</td>
+            <td>Mentor-Mentee</td>
         </tr>
+        </tbody>
     </table>
 </body>
 </html>
