--- a/Exp1.html
+++ b/Exp1.html
@@ -23,10 +23,12 @@
         <li>JavaScript</li>
     </ul>
     <h1>Course Description (Description List)</h1>
-    <h2>C Programming</h2>
-    <p>Learn Basics of C language including loops, arrays, and functions.</p>
-    <h2>Java</h2>
-    <p>Introduction to Object-Oriented Programming concepts.</p>
+    <dl>
+    <dt><b>C Programming</b></dt>
+    <dd>Learn Basics of C language including loops, arrays, and functions.</dd>
+    <dt><b>Java</b></dt>
+    <dd>Introduction to Object-Oriented Programming concepts.</dd>
+    </dl>
     <h1>Course Modules (Nested List)</h1>
     <ol>
         <li>Module 1: Basics</li>
@@ -52,16 +54,12 @@
     <ul>
         <li>Database</li>
         <ol type="A">
-            <li>mySQL</li>
+            <li>MySQL</li>
             <li>MangoDB</li>
         </ol>
     </ul>
     </ul>
-
-
     <p>Name:<b>Vineet Rawat</b></p>
     <p>Admission No.<b>2025B15410262</b></p>
-
-
 </body>
 </html>
