--- a/Exp2.html
+++ b/Exp2.html
@@ -8,45 +8,47 @@
 </head>
 
 <body>
-    
-        <h1 align="center" >Global Daily News</h1>
-        <p align="center">Your Trusted Source for Latest Updates</p>
-        <hr></hr>
-        <p align="center">
-        <a href="https://www.bbc.com/news/world">World|</a>
-        <a href="https://www.bbc.com/news/world">Sports|</a>
-        <a href="https://www.bbc.com/news/world">Entertainment|</a>
-        <a href="https://www.bbc.com/news/world">Podcast|</a>
-        <a href="https://www.bbc.com/news/world">Contact|</a></p>
-        <hr></hr>
-        <p>World News</p>
-        <p>Today's top headline: Global leaders meet to discuss climate change initiatives.</p>
-        <img src="https://c.files.bbci.co.uk/16B26/production/_96566929_bbc_wn_rgb.png" width="500" height="300" />
-        <p><a href="https://www.bbc.com/news/world">Read more on BBC</a></p>
-        <h2>Sports Update</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/3LX-K8wWtmY?si=wylj4XEo78KMTaP0"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <p>Highlights of yesterday's football match with thrilling last-minute goals!</p>
-        <h2>Entertainment Buzz</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/pwkj0_0B3Gg?si=QXA1Ch44DfCcriyv"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <p>New movie trailer released today. Fans are excited!</p>
-
-        <h2>News Podcast</h2>
-        <p>Listen to today's top headlines:</p>
-        <audio controls>
+    <h1 align="center">Global Daily News</h1>
+    <p align="center">Your Trusted Source for Latest Updates</p>
+    <hr>
+    </hr>
+    <p align="center">
+        <a href="https://www.bbc.com/news/world">World | Sports | Entertainment | Podcast | Contact</a>
+    </p>
+    <hr>
+    </hr>
+    <p>World News</p>
+    <p>Today's top headline: Global leaders meet to discuss climate change initiatives.</p>
+    <img src="https://c.files.bbci.co.uk/16B26/production/_96566929_bbc_wn_rgb.png" width="500" height="300" />
+    <p><a href="https://www.bbc.com/news/world">Read more on BBC</a></p>
+    <h2>Sports Update</h2>
+    <p>Highlights of yesterday's football match with thrilling last-minute goals!</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/3LX-K8wWtmY?si=wylj4XEo78KMTaP0"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <hr>
+    </hr>
+    <h2>Entertainment Buzz</h2>
+    <p>New movie trailer released today. Fans are excited!</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/pwkj0_0B3Gg?si=QXA1Ch44DfCcriyv"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <hr>
+    </hr>
+    <h2>News Podcast</h2>
+    <p>Listen to today's top headlines:</p>
+    <audio controls>
         <source src="GlobalNewsPodcast-20250930-HamasStudyingTrumpNetanyahuPeacePlan.mp3" type="audio/mpeg" />
-        <source src="GlobalNewsPodcast-20250930-HamasStudyingTrumpNetanyahuPeacePlan.mp3.ogg" type="audio/orgg" /> Your browser does not support the audio element.
+        <source src="GlobalNewsPodcast-20250930-HamasStudyingTrumpNetanyahuPeacePlan.mp3.ogg" type="audio/orgg" /> Your
+        browser does not support the audio element.
     </audio>
-        <h2>Contact Us</h2>
-        <p>Email:info@globalnews.com</p>
-        <p>&copy; 2025 Global Daily News</p>
-
-
+    <hr>
+    </hr>
+    <h2>Contact Us</h2>
+    <p>Email:info@globalnews.com</p>
+    <p>&copy; 2025 Global Daily News</p>
 </body>
 
 </html>
