--- a/Exp3.html
+++ b/Exp3.html
@@ -8,66 +8,20 @@
 </head>
 
 <body>
-
-    <h1> Class Timetable </h1>
-
+    <h1 align="center">College Timetable CSE DS-3</h1>
     <table border="3">
         <thead>
             <tr>
-                <th align="center">
-                    Time<br>Day
-                </th>
-                <th align="center">
-                    I
-                    <hr>
-                    08:50-09:40
-                </th>
-                <th align="center">
-                    II
-                    <hr>
-                    09:40-10:30
-
-                </th>
-                <th align="center">
-                    III
-                    <hr>
-                    10:40-11:30
-                </th>
-                <th align="center">
-                    IV
-                    <hr>
-                    11:30-12:20
-
-                </th>
-                <th align="center">
-                    V
-                    <hr>
-                    12:20-01:10
-                </th>
-                <th align="center">
-                    VI
-                    <hr>
-                    01:10-02:00
-
-                </th>
-                <th align="center">
-                    VII
-                    <hr>
-                    02:00-02:50
-
-                </th>
-                <th align="center">
-                    VII
-                    <hr>
-                    02:50-03:40
-
-                </th>
-                <th align="center">
-                    VIII
-                    <hr>
-                    03:40-04:30
-
-                </th>
+                <th align="center"> Time<br> Day</th>
+                <th align="center"> I <hr> 08:50-09:40</th>
+                <th align="center">II <hr> 09:40-10:30</th>
+                <th align="center"> III <hr> 10:40-11:30</th>
+                <th align="center"> IV <hr> 11:30-12:20 </th>
+                <th align="center"> V <hr> 12:20-01:10 </th>
+                <th align="center"> VI <hr> 01:10-02:00 </th>
+                <th align="center"> VII <hr> 02:00-02:50 </th>
+                <th align="center"> VII <hr> 02:50-03:40 </th>
+                <th align="center"> VIII <hr> 03:40-04:30 </th>
             </tr>
         </thead>
         <tbody>
