--- a/Exp5.html
+++ b/Exp5.html
@@ -59,7 +59,7 @@
         <br>
         <div>
             <button type="submit">Register</button>
-            <button type="submit">Clear</button>
+            <button type="clear">Clear</button>
         </div>
     </form>
     <hr>
