--- a/Exp5.html
+++ b/Exp5.html
@@ -63,7 +63,7 @@
         </div>
     </form>
     <hr>
-    <p align="center">&copy 2025 Student Registration Portal</p>
+    <p align="center">&copy; 2025 Student Registration Portal</p>
 </body>
 
 </html>
