--- a/experiment7.html
+++ b/experiment7.html
@@ -12,7 +12,7 @@
     .site {
       background-color: rgb(146, 145, 145);
       color: white;
-      margin:5px;
+      margin:0px 5px 10px;
       padding: 10px;
       text-align: center;
     }
@@ -23,14 +23,17 @@
       background-color: skyblue;
       color: rgb(70, 70, 190);
       margin:5px;
-      padding: 10px; 
+      padding: 10px;
+      font-weight: bold; 
     }
     .chill {
       display: inline-block;
       background-color: rgb(52, 201, 141);
-      color: rgb(143, 245, 219);
+      color: rgb(93, 66, 168);
       margin:5px;
       padding: 10px; 
+      margin-bottom: 30px;
+      font-weight: bold;
     }
     
   </style>
@@ -41,16 +44,16 @@
   </header>
 
   <nav>
-    <span class="Home">Home</span>
-    <span class="Home">About</span>
-    <span class="Home">Service</span>
-    <span class="Home">Contact</span>
+    <div class="Home">Home</div>
+    <div class="Home">About</div>
+    <div class="Home">Service</div>
+    <div class="Home">Contact</div>
   </nav>
     <nav>
-    <span class="chill">Dashboard</span>
-    <span class="chill">profile</span>
-    <span class="chill">message</span>
-    <span class="chill">logout</span>
+    <div class="chill">Dashboard</div>
+    <div class="chill">profile</div>
+    <div class="chill">message</div>
+    <div class="chill">logout</div>
   </nav>
 </body>
 </html>
